--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <boby>
 <div class="container">
-        <h2>Registration Form</h2>
+        <h2>changed Registration Form</h2>
         <form action="" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
