--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta char set="UTF-8">
 <meta name="viewport"contnt="width"device-width,initial_scale=1.0">
-<title>Registration form</title>
+<title>changed Registration form</title>
 <linkrel="stylessheet"href="styles.css">
 <script src="./main.js"type="text/javascript">
 </script>
