--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <head>
 <meta char set="UTF-8">
 <meta name="viewport"contnt="width"device-width,initial_scale=1.0">
-<title>changed Registration form</title>
+<title>changedRegistration form</title>
 <linkrel="stylessheet"href="styles.css">
 <script src="./main.js"type="text/javascript">
 </script>
 </head>
 <boby>
 <div class="container">
-        <h2>changed Registration Form</h2>
+        <h2>changedRegistration Form</h2>
         <form action="" method="post">
             <div class="form-group">
                 <label for="name">Name:</label>
@@ -24,7 +24,7 @@
                 <input type="tel" id="phone" name="phone" />
             </div>
             <div class="form-group">
-                <input type="button" onclick="validateForm();" value="Register">
+                <input type="button" onclick="validateForm();" value="changedRegister">
             </div>
         </form>
     </div>
